<resources>
    <string name="app_name">GeekBank-Android</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_a_password">Create a password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="send_money">Send money</string>
    <string name="available">Available:</string>
    <string name="commission">Commission:</string>
    <string name="alina_tashbolotova">Alina Tashbolotova</string>
    <string name="settings">Settings</string>
    <string name="change_pin_code">Change Pin Code</string>
    <string name="change_account_password">Change Account Password</string>
    <string name="notification">Notification</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="are_you_sure_you_want_to_switch_to_a_light_theme">Are you sure you want to switch to a light theme???</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="russian">Russian</string>
    <string name="switch_language">Switch Language</string>
    <string name="english">English</string>
    <string name="default_course">Default course</string>
    <string name="offer">Offer</string>
    <string name="total_balance">Total balance</string>
    <string name="card_detail">Card detail</string>
    <string name="transfer">Transfer</string>
    <string name="payments">Payments</string>
    <string name="exchange">Exchange</string>
    <string name="qr">QR</string>
    <string name="freeze_card">Freeze Card</string>
    <string name="history_transactions">History transactions</string>
    <string name="card_holder_name">Card Holder name</string>
    <string name="are_you_sure_you_want_to_freeze_cards">Are you sure,you want to freeze cards?</string>
    <string name="qr_code">QR code</string>
    <string name="see_all">See All</string>
    <string name="latest_news">Latest News</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="your_card_has_an_id_enter_the_numbers_after">Your card has an ID, enter the numbers after</string>
    <string name="password">Password</string>
    <string name="transfer_card">Transfer Card</string>
    <string name="from_the_card">From the Card</string>
    <string name="to_the_card">To the Card</string>
    <string name="january_18_2022">January 18.2022</string>
    <string name="error_text">Error Text</string>
    <string name="phone_number">Phone number</string>
    <string name="last_name">Last name</string>
    <string name="name">Name</string>
    <string name="choose_photo">Choose photo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="your_password">your password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="save">SAVE</string>
    <string name="fines">Fines</string>
    <string name="cellular_operators">Cellular operators</string>
    <string name="internet">Internet</string>
    <string name="public_utilites">Public Utilites</string>
    <string name="games_amp_entertainment"><![CDATA[Games & Entertainment]]></string>
    <string name="socail_network">Socail network</string>
    <string name="fixed_line">Fixed line</string>
    <string name="log_in">Log in</string>
    <string name="too_many_attempt">Too many attempt</string>
    <string name="choose_theme_text">Choose theme</string>
    <string name="foorgot">If you have forgotten your password, please log out of your account and log in again</string>
    <string name="error">Error</string>
    <string name="translations">Translations</string>
    <string name="exchange_rates">Exchange rates</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="pin_code">Pin-Code</string>
    <string name="verify_your_identity">Verify your identity</string>
    <string name="сonfirm_your_identity">Confirm your identity so we can verify it\'s you</string>
    <string name="no_biometric">Sorry. It seems your device has no biometric hardware</string>
    <string name="biometric_features_are_currently_unavailable">Biometric features are currently unavailable.</string>
    <string name="not_registered_any_biometric_credentials">You have not registered any biometric credentials</string>
    <string name="does_not_match">Access code does not match, please try again!!!</string>
    <string name="not_match">Code does not match, please try again!</string>
    <string name="fingerprint_not_registered">Fingerprint not registered</string>
    <string name="enter_your_current_pin_code">ENTER YOUR CURRENT PIN CODE</string>
    <string name="confirm_the_password">Confirm the password</string>
    <string name="language_changet">Language changed</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System default</string>
    <string name="home">Home</string>
    <string name="cards">Cards</string>
    <string name="crypta">Crypta</string>
    <string name="profile">Profile</string>
    <string-array name="condition">
    <item>
        neAdmin
    </item>
        <item>
        admin
    </item>
    </string-array>

    <!-- OnBoarding -->
    <string name="title_on_boarding_first_slide">Fast recording of expenses and payments</string>
    <string name="title_on_boarding_second_slide">Transfer without commission</string>
    <string name="title_on_boarding_third_slide">Quick card issuance</string>
    <string name="title_button_get_started">Get Started</string>
</resources>