<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_corner_radius"
    tools:context=".presentation.ui.fragments.freezeCard.FreezeDialogFragment">

    <TextView
        android:id="@+id/txt_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/are_you_sure_you_want_to_freeze_cards"
        android:textColor="@color/text_color_detail_news"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_freeze_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/light_2blue"
        android:text="@string/freeze_card"
        android:textSize="12dp"
        android:maxEms="9"
        android:textColor="@color/text_color_dialog"
        app:cornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_dialog" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:textSize="12dp"
        android:backgroundTint="@color/text_color_dialog"
        android:text="@string/cancel"
        android:textColor="@color/light_2blue"
        app:cornerRadius="5dp"
        app:layout_constraintStart_toEndOf="@id/btn_freeze_card"
        app:layout_constraintTop_toBottomOf="@id/txt_dialog" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_card"
        android:layout_width="95dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/card"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/txt_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>