<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.fragments.transfer.TransferFragment">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="14dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btn_set_money"
        app:layout_constraintRight_toRightOf="@id/btn_set_money"
        app:layout_constraintTop_toTopOf="@id/btn_set_money" />

    <TextView
        android:id="@+id/txt_from_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/from_the_card"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/card_recycler1"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/txt_to_the_card"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_from_card"
        tools:listitem="@layout/item_transfer_list" />

    <TextView
        android:id="@+id/txt_to_the_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/to_the_card"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_recycler1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/card_recycler2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_to_the_card"
        tools:itemCount="4"
        tools:listitem="@layout/item_list_transfer_number" />

    <TextView
        android:id="@+id/txt_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="30dp"
        android:text="@string/available"
        android:textColor="@color/text_hint"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_recycler2" />

    <TextView
        android:id="@+id/txt_number_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/txt_available"
        app:layout_constraintTop_toTopOf="@+id/txt_available"
        tools:text="$ 3,150.70" />


    <EditText
        android:id="@+id/input_txt_transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="0"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/title_text_color"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_available" />

    <TextView
        android:id="@+id/txt_commission"
        android:layout_width="105dp"
        android:layout_height="19dp"
        android:layout_marginStart="120dp"
        android:text="@string/commission"
        android:textColor="@color/text_hint"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_txt_transfer" />

    <TextView
        android:id="@+id/txt_commission_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/txt_commission"
        app:layout_constraintTop_toTopOf="@+id/txt_commission"
        tools:text="$ 5,150" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_set_money"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_card_number"
        android:text="@string/send_money"
        android:textColor="@color/text_color_detail_news"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_next"
        app:iconGravity="end"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_commission_number" />

</androidx.constraintlayout.widget.ConstraintLayout>