<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.fragments.editProfile.EditProfileFragment">

<!--    <ImageView-->
<!--        android:id="@+id/image_arrow_edit_profile"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="25dp"-->
<!--        android:layout_marginTop="40dp"-->
<!--        android:src="@drawable/arrow_left"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <TextView-->
<!--        android:id="@+id/txt_edit_profile"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="32dp"-->
<!--        android:layout_marginTop="35dp"-->
<!--        android:text="@string/edit_profile"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="24sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@id/image_arrow_edit_profile"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/image_edit_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_choose_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/choose_photo"
        android:textColor="@color/light_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_edit_placeholder" />

    <View
        android:id="@+id/label_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/view_edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_choose_photo" />

    <TextView
        android:id="@+id/hint_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        android:textColorHint="@color/text_hint"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/label_edit_profile"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_your_name"
        android:textColorHint="@color/text_hint"
        app:boxBackgroundMode="filled"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:counterEnabled="true"
        app:startIconDrawable="@drawable/user"
        app:startIconTint="@color/black"
        app:counterMaxLength="20"
        android:layout_marginBottom="30dp"
        app:counterTextColor="@color/black"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:errorEnabled="true"
        app:hintEnabled="true"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/hint_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_profile"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:maxLength="21"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="17dp"
            android:theme="@style/CustomEditText" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/hint_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/last_name"
        android:textColorHint="@color/text_hint"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_your_last_name"
        android:textColorHint="@color/text_hint"
        app:boxBackgroundMode="filled"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:startIconDrawable="@drawable/user"
        app:startIconTint="@color/black"
        app:counterTextColor="@color/black"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hint_last_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_profile"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:maxLength="21"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="17dp"
            android:theme="@style/CustomEditText" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/hint_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/phone_number"
        android:textColorHint="@color/text_hint"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_last_name" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_your_number"
        android:textColorHint="@color/text_hint"
        app:boxBackgroundMode="filled"
        app:boxStrokeWidth="0dp"
        app:startIconDrawable="@drawable/ic_phone"
        app:startIconTint="@color/black"
        app:boxStrokeWidthFocused="0dp"
        app:counterMaxLength="20"
        app:counterTextColor="@color/black"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hint_phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_profile"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="21"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="17dp"
            android:theme="@style/CustomEditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:cornerRadius="5dp"
        android:text="@string/save"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>